--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solidpath Studios</title>
+    <link rel="icon" href="https://i.postimg.cc/XJ1gs7rz/Condensed-5-removebg-preview.png" />
   </head>
   <body>
     <div id="root"></div>
