--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solidpath Studios</title>
+
+    <title>Solidpath Studios - Roblox Development & Marketing Agency</title>
+    <meta name="description" content="Professional Roblox game development and brand activation agency. We create immersive experiences that engage 80M+ daily active users. Transform your brand presence on Roblox." />
+    <meta name="keywords" content="Roblox development, Roblox marketing, Roblox agency, brand activation Roblox, Roblox game development, metaverse marketing, Roblox experiences" />
+    <meta name="author" content="Solidpath Studios" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Solidpath Studios - Roblox Development & Marketing Agency" />
+    <meta property="og:description" content="Professional Roblox game development and brand activation agency. We create immersive experiences that engage 80M+ daily active users." />
+    <meta property="og:image" content="https://i.postimg.cc/XJ1gs7rz/Condensed-5-removebg-preview.png" />
+    <meta property="og:url" content="https://solidpathstudios.com" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Solidpath Studios - Roblox Development & Marketing Agency" />
+    <meta name="twitter:description" content="Professional Roblox game development and brand activation agency. We create immersive experiences that engage 80M+ daily active users." />
+    <meta name="twitter:image" content="https://i.postimg.cc/XJ1gs7rz/Condensed-5-removebg-preview.png" />
+
+    <link rel="canonical" href="https://solidpathstudios.com" />
     <link rel="icon" href="https://i.postimg.cc/XJ1gs7rz/Condensed-5-removebg-preview.png" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
   </head>
   <body>
     <div id="root"></div>
