--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:description" content="Professional Roblox game development and brand activation agency. We create immersive experiences that engage 80M+ daily active users." />
     <meta property="og:image" content="https://i.postimg.cc/XJ1gs7rz/Condensed-5-removebg-preview.png" />
     <meta property="og:url" content="https://solidpathstudios.com" />
+    <meta name="theme-color" content="#8a2be2">
+
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Solidpath Studios - Roblox Development & Marketing Agency" />
